<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/action_medical_hostory"
                android:enabled="true"
                android:icon="@drawable/ic_watchlist_white"
                android:title="@string/medical_history"
                app:showAsAction="always"/>

        <item
                android:id="@+id/action_medical_report"
                android:enabled="true"
                android:icon="@drawable/ic_watchlist_white"
                android:title="@string/medical_reports"
                app:showAsAction="always"/>

        <item
                android:id="@+id/action_user_profile"
                android:enabled="true"
                android:icon="@drawable/ic_watchlist_white"
                android:title="@string/user_profile"
                app:showAsAction="always"/>

        <item
                android:id="@+id/action_change_password"
                android:enabled="true"
                android:icon="@drawable/ic_watchlist_white"
                android:title="@string/change_password"
                app:showAsAction="always"/>

        <item
                android:id="@+id/action_logout"
                android:enabled="true"
                android:icon="@drawable/ic_watchlist_white"
                android:title="@string/logout"
                app:showAsAction="always"/>
    </group>

</menu>