<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        android:id="@+id/rootView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

    <in.co.akgroups.apnaClinic.custom.CustomTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:type_face="@string/font_heavy"
            android:maxLines="2"
            android:text="@string/forgot_password"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="20dp"
            android:textColor="#ff201c29"
            android:ellipsize="end"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"
    />

    <EditText
            android:id="@+id/edit_text_email_id"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:background="@drawable/search_background"
            android:singleLine="true"
            android:hint="@string/enter_email"
            android:paddingLeft="20dp"
            android:paddingRight="16dp"
            android:layout_marginTop="20dp"
            android:imeOptions="actionNext"
            android:textColor="@color/gray"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"/>


    <in.co.akgroups.apnaClinic.custom.CustomButton
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/edit_text_email_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:type_face="@string/font_black"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/green"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
    android:layout_marginBottom="30dp"/>

    <in.co.akgroups.apnaClinic.custom.CustomButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/btn_submit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_submit"
            app:layout_constraintBottom_toBottomOf="@id/btn_submit"
            app:type_face="@string/font_black"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@color/green"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"/>

    <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>