<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_home"
            android:enabled="true"
            android:icon="@drawable/ic_home"
            android:iconTint="@color/black"
            app:itemIconTint="@drawable/selector"
            app:labelVisibilityMode="unlabeled"
            android:title="@string/home"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_watchlist"
            android:enabled="true"
            android:icon="@drawable/ic_watchlist"
            app:itemIconTint="@drawable/selector"
            app:labelVisibilityMode="unlabeled"
            android:title="watchlist"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/action_rate"
            android:enabled="true"
            android:icon="@drawable/ic_rate_bottom_navigation"
            app:labelVisibilityMode="unlabeled"
            app:itemIconTint="@drawable/selector"
            android:title="@string/rate"
            app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        app:itemIconTint="@drawable/selector"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <!--<item-->
            <!--android:id="@+id/action_friends"-->
            <!--android:enabled="true"-->
            <!--android:icon="@drawable/ic_profile"-->
            <!--app:labelVisibilityMode="unlabeled"-->
            <!--app:itemIconTint="@drawable/selector"-->
            <!--android:title="@string/friends"-->
            <!--app:showAsAction="ifRoom"/>-->
</menu>