<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/edit_text_login_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/search_background"
        android:hint="@string/emailOrPhone"
        android:imeOptions="actionNext"
        android:paddingLeft="20dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/search_background"
        android:hint="@string/password"
        android:imeOptions="actionGo"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@color/gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_id" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:padding="12dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <in.co.akgroups.apnaClinic.custom.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@color/green"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_password"
        app:type_face="@string/font_black" />

    <in.co.akgroups.apnaClinic.custom.CustomButton
        android:id="@+id/btn_forgot_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:type_face="@string/font_black" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_isPatient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="true"
            android:text="is Patient"
            android:textColor="@color/gray" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_isDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="is Doctor"
            android:textColor="@color/gray" />
    </RadioGroup>


    <in.co.akgroups.apnaClinic.custom.CustomTextView
        android:id="@+id/new_user"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="80dp"
        android:gravity="center|right"
        android:text="@string/new_user"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:type_face="@string/font_heavy" />

    <in.co.akgroups.apnaClinic.custom.CustomButton
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/new_user"
        app:layout_constraintLeft_toRightOf="@id/new_user"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_user"
        app:layout_constraintWidth_percent="0.4"
        app:type_face="@string/font_black" />
</android.support.constraint.ConstraintLayout>