<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

        <in.co.akgroups.apnaClinic.custom.CustomTextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="Title"
                app:type_face="@string/font_black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"/>

        <in.co.akgroups.apnaClinic.custom.CustomButton
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="#ff14d2b8"
                app:type_face="@string/font_black"
                android:layout_marginRight="1px"
                android:text="@string/yes"
                android:textColor="@color/white"/>

        <in.co.akgroups.apnaClinic.custom.CustomButton
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:text="@string/no"
                app:layout_constraintWidth_percent="0.5"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="#ffa3a3a3"
                app:type_face="@string/font_black"
                android:layout_marginLeft="1px"
                android:layout_height="wrap_content"
                android:textColor="@color/white"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>